--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -30,7 +30,7 @@ jobs:
       - name: Upload to S3
         uses: jakejarvis/s3-sync-action@master
         with:
-          args: --acl public-read
+          args: --delete
         env:
           SOURCE_DIR: olympic-analysis/build/
           AWS_S3_BUCKET: ${{ secrets.AWS_S3_BUCKET }}
