--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -2,9 +2,9 @@ name: Deploy Django Backend
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ "backend" ]
   pull_request:
-    branches: [ "main" ]
+    branches: [ "backend" ]
 
 jobs:
   deploy:
