--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -2,9 +2,9 @@ name: Upload Website
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ "frontend" ]
   pull_request:
-    branches: [ "main" ]
+    branches: [ "frontend" ]
 
 jobs:
   build:
