--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -14,7 +14,7 @@ jobs:
       EC2_USER: ${{ secrets.EC2_USER }}
       EC2_HOST: ${{ secrets.EC2_HOST }}
       EC2_PROJECT_DIR: ${{ secrets.EC2_PROJECT_DIR }}
-      EC2_SSH_KEY: ${{ secrets.EC2_SSH_KEY }}
+      EC2_SSH_KEY_BASE64: ${{ secrets.EC2_SSH_KEY_BASE64 }}
 
     steps:
       - name: Checkout code
@@ -28,14 +28,27 @@ jobs:
       - name: Install dependencies
         run: pip install -r backend/olympic_project/requirements.txt
 
+      - name: Decode SSH key
+        run: |
+          echo "$EC2_SSH_KEY_BASE64" | base64 --decode > key.pem
+          chmod 600 key.pem
+
       - name: Deploy to EC2
         run: |
-          echo "$EC2_SSH_KEY" > key.pem
-          chmod 600 key.pem
           ssh -o StrictHostKeyChecking=no -i key.pem $EC2_USER@$EC2_HOST << 'EOF'
-            mkdir -p $EC2_PROJECT_DIR
+            sudo apt update
+            sudo apt install -y git python3-pip python3-venv nginx
+            if [ ! -d "$EC2_PROJECT_DIR" ]; then
+              mkdir -p $EC2_PROJECT_DIR
+              git clone https://github.com/yourusername/yourrepository.git $EC2_PROJECT_DIR
+            else
+              cd $EC2_PROJECT_DIR
+              git pull origin backend
+            fi
             cd $EC2_PROJECT_DIR
-            git pull origin main
+            if [ ! -d "venv" ]; then
+              python3 -m venv venv
+            fi
             source venv/bin/activate
             pip install -r backend/olympic_project/requirements.txt
             python manage.py migrate
