--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -14,7 +14,7 @@ jobs:
       EC2_USER: ${{ secrets.EC2_USER }}
       EC2_HOST: ${{ secrets.EC2_HOST }}
       EC2_PROJECT_DIR: ${{ secrets.EC2_PROJECT_DIR }}
-      EC2_SSH_KEY_BASE64: ${{ secrets.EC2_SSH_KEY_BASE64 }}
+      EC2_SSH_KEY: ${{ secrets.EC2_SSH_KEY }}
 
     steps:
       - name: Checkout code
@@ -28,9 +28,9 @@ jobs:
       - name: Install dependencies
         run: pip install -r backend/olympic_project/requirements.txt
 
-      - name: Decode SSH key
+      - name: Add SSH key
         run: |
-          echo "$EC2_SSH_KEY_BASE64" | base64 --decode > key.pem
+          echo "$EC2_SSH_KEY" > key.pem
           chmod 600 key.pem
 
       - name: Deploy to EC2
