--- a/backend/olympic_project/requirements.txt
+++ b/backend/olympic_project/requirements.txt
@@ -11,6 +11,7 @@ email_validator==2.2.0
 exceptiongroup==1.2.2
 fastapi==0.111.1
 fastapi-cli==0.0.4
+gunicorn==22.0.0
 h11==0.14.0
 httpcore==1.0.5
 httptools==0.6.1
@@ -22,6 +23,7 @@ markdown-it-py==3.0.0
 MarkupSafe==2.1.5
 mdurl==0.1.2
 numpy==2.0.0
+packaging==24.1
 pandas==2.2.2
 pydantic==2.8.2
 pydantic_core==2.20.1
