--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -36,23 +36,72 @@ jobs:
       - name: Deploy to EC2
         run: |
           ssh -o StrictHostKeyChecking=no -i key.pem $EC2_USER@$EC2_HOST << 'EOF'
-            sudo apt update
-            sudo apt install -y git python3-pip python3-venv nginx
-            if [ ! -d "$EC2_PROJECT_DIR" ]; then
-              mkdir -p $EC2_PROJECT_DIR
-              git clone https://github.com/yourusername/yourrepository.git $EC2_PROJECT_DIR
+            # Ensure necessary directories exist
+            mkdir -p $EC2_PROJECT_DIR
+
+            # Navigate to project directory
+            cd $EC2_PROJECT_DIR
+
+            # Clone the repository if it doesn't exist
+            if [ ! -d ".git" ]; then
+              git clone https://github.com/yourusername/yourrepository.git .
             else
-              cd $EC2_PROJECT_DIR
               git pull origin backend
             fi
-            cd $EC2_PROJECT_DIR
-            if [ ! -d "venv" ]; then
-              python3 -m venv venv
+
+            # Set up virtual environment
+            if [ ! -d "/home/ubuntu/venv" ]; then
+              python3 -m venv /home/ubuntu/venv
             fi
-            source venv/bin/activate
+            source /home/ubuntu/venv/bin/activate
+
+            # Install dependencies
+            pip install gunicorn
             pip install -r backend/olympic_project/requirements.txt
-            python manage.py migrate
-            sudo systemctl restart gunicorn
+
+            # Create Gunicorn service file
+            sudo bash -c 'cat > /etc/systemd/system/gunicorn.service << "EOL"
+            [Unit]
+            Description=gunicorn daemon
+            After=network.target
+
+            [Service]
+            User=ubuntu
+            Group=www-data
+            WorkingDirectory=$EC2_PROJECT_DIR
+            ExecStart=/home/ubuntu/venv/bin/gunicorn --access-logfile - --workers 3 --bind unix:$EC2_PROJECT_DIR.sock olympic_project.wsgi:application
+
+            [Install]
+            WantedBy=multi-user.target
+            EOL'
+
+            # Reload systemd and restart Gunicorn
+            sudo systemctl daemon-reload
+            sudo systemctl start gunicorn
+            sudo systemctl enable gunicorn
+
+            # Create Nginx configuration file
+            sudo bash -c 'cat > /etc/nginx/sites-available/olympic_project << "EOL"
+            server {
+                listen 80;
+                server_name $EC2_HOST;
+
+                location = /favicon.ico { access_log off; log_not_found off; }
+                location /static/ {
+                    root $EC2_PROJECT_DIR;
+                }
+
+                location / {
+                    include proxy_params;
+                    proxy_pass http://unix:$EC2_PROJECT_DIR.sock;
+                }
+            }
+            EOL'
+
+            # Enable Nginx configuration and restart Nginx
+            sudo ln -s /etc/nginx/sites-available/olympic_project /etc/nginx/sites-enabled/
+            sudo rm /etc/nginx/sites-enabled/default
+            sudo nginx -t
             sudo systemctl restart nginx
           EOF
         shell: bash
