--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -57,10 +57,10 @@ jobs:
 
             # Install dependencies
             pip install gunicorn
-            pip install -r backend/olympic_project/requirements.txt
+            pip install -r requirements.txt
 
             # Create Gunicorn service file
-            sudo bash -c 'cat > /etc/systemd/system/gunicorn.service << "EOL"
+            sudo bash -c 'cat > /etc/systemd/system/gunicorn.service << EOL
             [Unit]
             Description=gunicorn daemon
             After=network.target
@@ -81,7 +81,7 @@ jobs:
             sudo systemctl enable gunicorn
 
             # Create Nginx configuration file
-            sudo bash -c 'cat > /etc/nginx/sites-available/olympic_project << "EOL"
+            sudo bash -c 'cat > /etc/nginx/sites-available/olympic_project << EOL
             server {
                 listen 80;
                 server_name $EC2_HOST;
@@ -99,9 +99,8 @@ jobs:
             EOL'
 
             # Enable Nginx configuration and restart Nginx
-            sudo ln -s /etc/nginx/sites-available/olympic_project /etc/nginx/sites-enabled/
-            sudo rm /etc/nginx/sites-enabled/default
+            sudo ln -sf /etc/nginx/sites-available/olympic_project /etc/nginx/sites-enabled/
             sudo nginx -t
             sudo systemctl restart nginx
-          EOF
+            EOF
         shell: bash
