--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -35,7 +35,7 @@ jobs:
 
       - name: Deploy to EC2
         run: |
-          ssh -o StrictHostKeyChecking=no -i key.pem $EC2_USER@$EC2_HOST << EOF
+          ssh -o StrictHostKeyChecking=no -i key.pem $EC2_USER@$EC2_HOST << 'EOF'
             # Ensure necessary directories exist
             mkdir -p $EC2_PROJECT_DIR
 
@@ -60,7 +60,7 @@ jobs:
             pip install -r backend/olympic_project/requirements.txt
 
             # Create Gunicorn service file
-            sudo bash -c 'cat > /etc/systemd/system/gunicorn.service <<- EOL
+            sudo bash -c 'cat > /etc/systemd/system/gunicorn.service << EOL
             [Unit]
             Description=gunicorn daemon
             After=network.target
@@ -81,7 +81,7 @@ jobs:
             sudo systemctl enable gunicorn
 
             # Create Nginx configuration file
-            sudo bash -c 'cat > /etc/nginx/sites-available/olympic_project <<- EOL
+            sudo bash -c 'cat > /etc/nginx/sites-available/olympic_project << EOL
             server {
                 listen 80;
                 server_name $EC2_HOST;
@@ -102,5 +102,5 @@ jobs:
             sudo ln -sf /etc/nginx/sites-available/olympic_project /etc/nginx/sites-enabled/
             sudo nginx -t
             sudo systemctl restart nginx
-        EOF
+          EOF
         shell: bash
