--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -62,20 +62,20 @@ jobs:
             pip install -r $EC2_PROJECT_DIR/backend/olympic_project/requirements.txt
 
             # Create Gunicorn service file
-            sudo bash -c 'cat > /etc/systemd/system/gunicorn.service << EOL
-[Unit]
-Description=gunicorn daemon
-After=network.target
+            sudo bash -c 'cat > /etc/systemd/system/gunicorn.service <<- "EOL"
+            [Unit]
+            Description=gunicorn daemon
+            After=network.target
 
-[Service]
-User=ubuntu
-Group=www-data
-WorkingDirectory=$EC2_PROJECT_DIR
-ExecStart=/home/ubuntu/venv/bin/gunicorn --access-logfile - --workers 3 --bind unix:$EC2_PROJECT_DIR.sock olympic_project.wsgi:application
+            [Service]
+            User=ubuntu
+            Group=www-data
+            WorkingDirectory=$EC2_PROJECT_DIR
+            ExecStart=/home/ubuntu/venv/bin/gunicorn --access-logfile - --workers 3 --bind unix:$EC2_PROJECT_DIR.sock olympic_project.wsgi:application
 
-[Install]
-WantedBy=multi-user.target
-EOL'
+            [Install]
+            WantedBy=multi-user.target
+            EOL'
 
             # Reload systemd and restart Gunicorn
             sudo systemctl daemon-reload
@@ -83,22 +83,22 @@ EOL'
             sudo systemctl enable gunicorn
 
             # Create Nginx configuration file
-            sudo bash -c 'cat > /etc/nginx/sites-available/olympic_project << EOL
-server {
-    listen 80;
-    server_name '$EC2_HOST';
+            sudo bash -c 'cat > /etc/nginx/sites-available/olympic_project <<- "EOL"
+            server {
+                listen 80;
+                server_name '$EC2_HOST';
 
-    location = /favicon.ico { access_log off; log_not_found off; }
-    location /static/ {
-        root $EC2_PROJECT_DIR;
-    }
+                location = /favicon.ico { access_log off; log_not_found off; }
+                location /static/ {
+                    root $EC2_PROJECT_DIR;
+                }
 
-    location / {
-        include proxy_params;
-        proxy_pass http://unix:$EC2_PROJECT_DIR.sock;
-    }
-}
-EOL'
+                location / {
+                    include proxy_params;
+                    proxy_pass http://unix:$EC2_PROJECT_DIR.sock;
+                }
+            }
+            EOL'
 
             # Enable Nginx configuration and restart Nginx
             sudo ln -sf /etc/nginx/sites-available/olympic_project /etc/nginx/sites-enabled/
