--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -2,9 +2,9 @@ name: Deploy Django Backend
 
 on:
   push:
-    branches: [ "backend" ]
+    branches: ["backend"]
   pull_request:
-    branches: [ "backend" ]
+    branches: ["backend"]
 
 jobs:
   deploy:
@@ -13,7 +13,6 @@ jobs:
     env:
       EC2_USER: ${{ secrets.EC2_USER }}
       EC2_HOST: ${{ secrets.EC2_HOST }}
-      EC2_PROJECT_DIR: ${{ secrets.EC2_PROJECT_DIR }}
       EC2_SSH_KEY: ${{ secrets.EC2_SSH_KEY }}
 
     steps:
@@ -36,23 +35,36 @@ jobs:
       - name: Deploy to EC2
         run: |
           ssh -o StrictHostKeyChecking=no -i key.pem $EC2_USER@$EC2_HOST << 'EOF'
+            set -e
             sudo apt update
             sudo apt install -y git python3-pip python3-venv nginx
-            if [ ! -d "$EC2_PROJECT_DIR" ]; then
-              mkdir -p $EC2_PROJECT_DIR
-              git clone https://github.com/yourusername/yourrepository.git $EC2_PROJECT_DIR
+
+            PROJECT_DIR="/home/ubuntu/OlympicOracle"
+
+            if [ ! -d "$PROJECT_DIR" ]; then
+              mkdir -p "$PROJECT_DIR"
+              git clone git@github.com:yourusername/yourrepository.git "$PROJECT_DIR"
             else
-              cd $EC2_PROJECT_DIR
+              cd "$PROJECT_DIR"
               git pull origin backend
             fi
-            cd $EC2_PROJECT_DIR
+
+            cd "$PROJECT_DIR/backend/olympic_project"
             if [ ! -d "venv" ]; then
               python3 -m venv venv
             fi
+
             source venv/bin/activate
-            pip install -r backend/olympic_project/requirements.txt
+            pip install -r requirements.txt
+
+            if [ ! -f "manage.py" ]; then
+              echo "manage.py not found in $PROJECT_DIR/backend/olympic_project"
+              exit 1
+            fi
+
             python manage.py migrate
-            sudo systemctl restart gunicorn
-            sudo systemctl restart nginx
+
+            sudo systemctl restart gunicorn || sudo systemctl status gunicorn
+            sudo systemctl restart nginx || sudo systemctl status nginx
           EOF
         shell: bash
