--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -24,6 +24,12 @@ jobs:
         with:
           python-version: '3.10.7'
 
+      - name: Start Venv
+        run: |
+          cd backend/olympic_project/
+          python3 -m venv venv
+
+
       - name: Install dependencies
         run: pip install -r backend/olympic_project/requirements.txt
 
