--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -81,7 +81,7 @@ jobs:
             echo "5"
             ls
             source venv/bin/activate
-            pip install -r requirements.txt
+            pip install -r requirements.txt --break-system-packages
 
             python3 manage.py migrate
 
