--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -85,6 +85,6 @@ jobs:
 
             python3 manage.py migrate
 
-            pyhon3 manage.py 0.0.0.0:8000
+            python3 manage.py 0.0.0.0:8000
 
           EOF
